Update LaunchAgent installation process

--- a/There/pm.there.There.LaunchAgent.plist
+++ b/There/pm.there.There.LaunchAgent.plist
@@ -10,5 +10,9 @@
     </array>
     <key>RunAtLoad</key>
     <true/>
+    <key>KeepAlive</key>
+    <true/>
+    <key>LimitLoadToSessionType</key>
+    <string>Aqua</string>
 </dict>
 </plist>
